it to us so that we may fix it.  LLNL users may report bugs using the
LLNL Sourceforge site if you have a sourceforge account:

https://sourceforge.llnl.gov/sf/tracker/do/listTrackers/projects.samrai/tracker

Bugs found by other users should send email to samrai-bugs@llnl.gov.

*****************************************************************************

----------------------------------------------------------------------------
                Summary of what's new
-----------------------------------------------------------------------------

This section contains a summary of additions to SAMRAI.  More detailed
descriptions of items in the following list are provided below.

(1) Boost is now required for building SAMRAI.



-----------------------------------------------------------------------------
                Summary of what's changed
-----------------------------------------------------------------------------

This section contains a summary of changes to SAMRAI.  More detailed
descriptions of items in the following list are provided below.

(1) 


*****************************************************************************

-----------------------------------------------------------------------------
                Details about what's new
-----------------------------------------------------------------------------

(1) Boost is now required for building SAMRAI.

Boost is required to build SAMRAI.   We have tested against boost/1.45.0.

Boost is available at www.boost.org.

Use the --with-boost=<directory> configure option to specify the path to 
the boost install.

-----------------------------------------------------------------------------
                Details about what's changed
-----------------------------------------------------------------------------

(1) 

=============================================================================
=============================================================================