@@ -50,7 +50,7 @@ descriptions of items in the following list are provided below.
 This section contains a summary of changes to SAMRAI.  More detailed
 descriptions of items in the following list are provided below.
 
-(1) 
+(1) The ceiling methods in IntVector have been renamed ceilingDivide.
 
 
 *****************************************************************************
@@ -72,7 +72,9 @@ the boost install.
                 Details about what's changed
 -----------------------------------------------------------------------------
 
-(1) 
+(1) The ceiling methods in IntVector have been renamed ceilingDivide.
+
+Renaming was meant to show the divide part of the operation.
 
 =============================================================================
 =============================================================================
